--- a/main.html
+++ b/main.html
@@ -8,8 +8,13 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h1>Why I want to become a developer?</h1>
+	<p> Actually I know CS. In this way we have more opportunity</p>
+	
     <script type="text/javascript" src="./script.js">
 </script>
+
+
 
 </body>
 
